--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -51,6 +51,7 @@ separator-foreground = ${colors.foreground}
 font-0 = SF Mono Powerline:style=Bold:size=10;2
 ; SF Mono Powerline:style=Bold:size=10;2
 ; JetBrainsMono Nerd Font:style=Bold:size=10;2
+; Cascadia Code:style=Regular:size=10;2
 
 modules-left = xworkspaces xwindow
 modules-right = pulseaudio memory cpu date
