--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,11 +1,6 @@
-# =========================================
-#    _ _____                  __ _
-#   (_)___ /  ___ ___  _ __  / _(_) __ _
-#   | | |_ \ / __/ _ \| '_ \| |_| |/ _` |
-#   | |___) | (_| (_) | | | |  _| | (_| |
-#   |_|____/ \___\___/|_| |_|_| |_|\__, |
-#                                  |___/
-# =========================================  
+# ==========
+#  i3config
+# ==========
 
 exec --no-startup-id ~/set_once_i3.sh
 
