--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,11 +1,4 @@
-# ============================================
-#         _                 _ _   _
-#    __ _| | __ _  ___ _ __(_) |_| |_ _   _
-#   / _` | |/ _` |/ __| '__| | __| __| | | |
-#  | (_| | | (_| | (__| |  | | |_| |_| |_| |
-#   \__,_|_|\__,_|\___|_|  |_|\__|\__|\__, |
-#                                     |___/
-# ============================================
+##### alacritty.yml #####
 
 # -------------------------------------------------
 # Switch themes with 'alacritty-themes' in terminal
