--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,15 +1,7 @@
 exec --no-startup-id ~/set_once_i3.sh
 
-# -------------------------
-# configuration begins here
-# -------------------------
-
-# Window title font. 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
 font pango: monospace 10
 
-# set the mod key to the winkey:
 set $mod Mod1
 
 # better window borders (from ThePrimeagen)
@@ -48,29 +40,29 @@ default_border pixel 1
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# switch to workspace
-bindsym $mod+1    workspace  $ws1
-bindsym $mod+2    workspace  $ws2
-bindsym $mod+3    workspace  $ws3
-bindsym $mod+4    workspace  $ws4
-bindsym $mod+5    workspace  $ws5
-bindsym $mod+6    workspace  $ws6
-bindsym $mod+7    workspace  $ws7
-bindsym $mod+8    workspace  $ws8
-bindsym $mod+9    workspace  $ws9
-bindsym $mod+0    workspace  $ws10
+# # switch to workspace
+# bindsym $mod+1    workspace  $ws1
+# bindsym $mod+2    workspace  $ws2
+# bindsym $mod+3    workspace  $ws3
+# bindsym $mod+4    workspace  $ws4
+# bindsym $mod+5    workspace  $ws5
+# bindsym $mod+6    workspace  $ws6
+# bindsym $mod+7    workspace  $ws7
+# bindsym $mod+8    workspace  $ws8
+# bindsym $mod+9    workspace  $ws9
+# bindsym $mod+0    workspace  $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1    move container to workspace  $ws1
-bindsym $mod+Shift+2    move container to workspace  $ws2
-bindsym $mod+Shift+3    move container to workspace  $ws3
-bindsym $mod+Shift+4    move container to workspace  $ws4
-bindsym $mod+Shift+5    move container to workspace  $ws5
-bindsym $mod+Shift+6    move container to workspace  $ws6
-bindsym $mod+Shift+7    move container to workspace  $ws7
-bindsym $mod+Shift+8    move container to workspace  $ws8
-bindsym $mod+Shift+9    move container to workspace  $ws9
-bindsym $mod+Shift+0    move container to workspace  $ws10
+# bindsym $mod+Shift+1    move container to workspace  $ws1
+# bindsym $mod+Shift+2    move container to workspace  $ws2
+# bindsym $mod+Shift+3    move container to workspace  $ws3
+# bindsym $mod+Shift+4    move container to workspace  $ws4
+# bindsym $mod+Shift+5    move container to workspace  $ws5
+# bindsym $mod+Shift+6    move container to workspace  $ws6
+# bindsym $mod+Shift+7    move container to workspace  $ws7
+# bindsym $mod+Shift+8    move container to workspace  $ws8
+# bindsym $mod+Shift+9    move container to workspace  $ws9
+# bindsym $mod+Shift+0    move container to workspace  $ws10
 
 # resize window (you can also use the mouse for that):
 mode "resize" {
@@ -105,10 +97,10 @@ bindsym $mod+r mode "resize"
 # start a terminal
 #bindsym $mod+Return exec --no-startup-id alacritty
 #bindsym $mod+t exec alacritty
-bindsym $mod+Return exec alacritty
+#bindsym $mod+Return exec alacritty
 
 # kill focused window
-bindsym $mod+q kill
+#bindsym $mod+q kill
 
 # -----------------
 # power keybindings
@@ -169,13 +161,13 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+#bindsym $mod+h split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+#bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+#bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
@@ -183,7 +175,7 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+#bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+g focus mode_toggle
@@ -219,8 +211,8 @@ bindsym XF86AudioPrev exec playerctl previous
 bindsym $mod+p exec /usr/local/bin/switch-audio-port
 
 ## App shortcuts
-bindsym $mod+b exec /usr/bin/firefox
-bindsym $mod+n exec /usr/bin/pcmanfm
+#bindsym $mod+b exec /usr/bin/firefox
+#bindsym $mod+n exec /usr/bin/pcmanfm
 bindsym Print exec scrot ~/Pictures/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~$HOME/Pictures/$(date +"%Y-%m-%d-%T")-screenshot.png"
 
 # Power Profiles menu switcher (rofi)
@@ -269,6 +261,8 @@ exec_always --no-startup-id picom --vsync
 # ----------------------------------------
 # autostart applications/services on login
 # ----------------------------------------
+
+exec_always sxhkd
 
 #get auth work with polkit-gnome
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
