--- a/.config/i3/config
+++ b/.config/i3/config
@@ -65,42 +65,42 @@ floating_modifier $mod
 # bindsym $mod+Shift+0    move container to workspace  $ws10
 
 # resize window (you can also use the mouse for that):
-mode "resize" {
+# mode "resize" {
 	# These bindings trigger as soon as you enter the resize mode
 	
 	# Pressing left will shrink the window's width.
 	# Pressing right will grow the window's width.
 	# Pressing up will shrink the window's height.
 	# Pressing down will grow the window's height.
-	bindsym j resize shrink width 10 px or 10 ppt
-	bindsym k resize grow height 10 px or 10 ppt
-	bindsym l resize shrink height 10 px or 10 ppt
-	bindsym ntilde resize grow width 10 px or 10 ppt
+	#bindsym j resize shrink width 10 px or 10 ppt
+	#bindsym k resize grow height 10 px or 10 ppt
+	#bindsym l resize shrink height 10 px or 10 ppt
+	#bindsym ntilde resize grow width 10 px or 10 ppt
 
 #same bindings, but for the arrow keys
-	bindsym Left resize shrink width 10 px or 10 ppt
-	bindsym Down resize grow height 10 px or 10 ppt
-	bindsym Up resize shrink height 10 px or 10 ppt
-	bindsym Right resize grow width 10 px or 10 ppt
+	#bindsym Left resize shrink width 10 px or 10 ppt
+	#bindsym Down resize grow height 10 px or 10 ppt
+	#bindsym Up resize shrink height 10 px or 10 ppt
+	#bindsym Right resize grow width 10 px or 10 ppt
 
 #back to normal: Enter or Escape
-	bindsym Return mode "default"
-	bindsym Escape mode "default"
-}
+	#bindsym Return mode "default"
+	#bindsym Escape mode "default"
+# }
 
-bindsym $mod+r mode "resize"
+#bindsym $mod+r mode "resize"
 
 # ---------------------------------
 # keybindings for different actions  
 # ---------------------------------
 
 # start a terminal
-#bindsym $mod+Return exec --no-startup-id alacritty
-#bindsym $mod+t exec alacritty
-#bindsym $mod+Return exec alacritty
+# bindsym $mod+Return exec --no-startup-id alacritty
+# bindsym $mod+t exec alacritty
+# bindsym $mod+Return exec alacritty
 
 # kill focused window
-#bindsym $mod+q kill
+# bindsym $mod+q kill
 
 # -----------------
 # power keybindings
@@ -108,11 +108,11 @@ bindsym $mod+r mode "resize"
 
 # exit-menu
 bindsym $mod+Shift+e exec ~/.config/i3/scripts/powermenu
-#bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # Lock the system
 # lock with a picture:
-#bindsym $mod+l exec i3lock -i  ~/.config/i3/i3-lock-screen.png -p default|win -t
+# bindsym $mod+l exec i3lock -i  ~/.config/i3/i3-lock-screen.png -p default|win -t
 # lock by blurring the screen:
 # bindsym $mod+l exec ~/.config/i3/scripts/blur-lock
 
@@ -136,29 +136,29 @@ bindsym $mod+Shift+r restart
 bindsym XF86MonBrightnessUp exec xbacklight +5 && notify-send "Brightness - $(xbacklight -get | cut -c1-2)%"
 bindsym XF86MonBrightnessDown exec xbacklight -5 && notify-send "Brightness - $(xbacklight -get | cut -c1-2)%"
 
-# change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
-# move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+# # change focus
+# bindsym $mod+j focus left
+# bindsym $mod+k focus down
+# bindsym $mod+l focus up
+# bindsym $mod+semicolon focus right
+# 
+# # alternatively, you can use the cursor keys:
+# bindsym $mod+Left focus left
+# bindsym $mod+Down focus down
+# bindsym $mod+Up focus up
+# bindsym $mod+Right focus right
+# 
+# # move focused window
+# bindsym $mod+Shift+j move left
+# bindsym $mod+Shift+k move down
+# bindsym $mod+Shift+l move up
+# bindsym $mod+Shift+semicolon move right
+# 
+# # alternatively, you can use the cursor keys:
+# bindsym $mod+Shift+Left move left
+# bindsym $mod+Shift+Down move down
+# bindsym $mod+Shift+Up move up
+# bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 #bindsym $mod+h split h
@@ -170,9 +170,9 @@ bindsym $mod+Shift+Right move right
 #bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+#bindsym $mod+s layout stacking
+#bindsym $mod+w layout tabbed
+#bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 #bindsym $mod+Shift+space floating toggle
@@ -184,7 +184,7 @@ bindsym $mod+g focus mode_toggle
 # bindsym $mod+a focus parent
 
 # open new empty workspace
-bindsym $mod+Shift+n exec ~/.config/i3/scripts/empty_workspace
+#bindsym $mod+Shift+n exec ~/.config/i3/scripts/empty_workspace
 
 # ---------------
 # Multimedia Keys
@@ -396,7 +396,7 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # personal rofi launcher (config.rasi)
 #bindsym $mod+space exec dmenu_run
-bindsym $mod+space exec --no-startup-id rofi -show run
+#bindsym $mod+space exec --no-startup-id rofi -show run
 
 # -------------
 # misc settings
