--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,50 +1,130 @@
-#	     _                 _     _
-#	 ___| |_ __ _ _ __ ___| |__ (_)_ __
-#	/ __| __/ _` | '__/ __| '_ \| | '_ \
-#	\__ \ || (_| | |  \__ \ | | | | |_) |
-#	|___/\__\__,_|_|  |___/_| |_|_| .__/
-#	                              |_|
-#	
+# starship.toml
 
-# Don't print a new line at the start of the prompt
-add_newline = true
-
-# makes prompt a single line
 [line_break]
 disabled = true
 
-# Replace the "❯" symbol in the prompt with "➜"
-[character] # The name of the module we are configuring is "character"
-success_symbol = "[➜](bold green)" # The "success_symbol" segment is being set to "➜" with the color "bold green"
-error_symbol = "[](bold red)"
-
 [cmd_duration]
-format = " took [$duration]($style) "
-style = "bold yellow"
 disabled = true
 
-# Disable the package module, hiding it from the prompt completely
-[python]
-disabled = false
+[character]
+success_symbol = "[>](bold green)"
+error_symbol = "[x](bold red)"
+vicmd_symbol = "[<](bold green)"
 
-[package]
-disabled = false
+[git_commit]
+tag_symbol = " tag "
 
-[ruby]
-disabled = false
-
-[rust]
-disabled = false
-
-[nodejs]
-disabled = false
-
-[java]
-disabled = false
-
-[golang]
-disabled = false
+[git_status]
+ahead = ">"
+behind = "<"
+diverged = "<>"
+renamed = "r"
+deleted = "x"
 
 [aws]
-disabled = false
+symbol = "aws "
 
+[c]
+symbol = "C "
+
+[cobol]
+symbol = "cobol "
+
+[conda]
+symbol = "conda "
+
+[crystal]
+symbol = "cr "
+
+[cmake]
+symbol = "cmake "
+
+[dart]
+symbol = "dart "
+
+[deno]
+symbol = "deno "
+
+[dotnet]
+symbol = ".NET "
+
+[directory]
+read_only = " ro"
+
+[docker_context]
+symbol = "docker "
+
+[elixir]
+symbol = "exs "
+
+[elm]
+symbol = "elm "
+
+[git_branch]
+symbol = "git "
+
+[golang]
+symbol = "go "
+
+[hg_branch]
+symbol = "hg "
+
+[java]
+symbol = "java "
+
+[julia]
+symbol = "jl "
+
+[kotlin]
+symbol = "kt "
+
+[nodejs]
+symbol = "nodejs "
+
+[memory_usage]
+symbol = "memory "
+
+[nim]
+symbol = "nim "
+
+[nix_shell]
+symbol = "nix "
+
+[ocaml]
+symbol = "ml "
+
+[package]
+symbol = "pkg "
+
+[perl]
+symbol = "pl "
+
+[php]
+symbol = "php "
+
+[pulumi]
+symbol = "pulumi "
+
+[purescript]
+symbol = "purs "
+
+[python]
+symbol = "py "
+
+[ruby]
+symbol = "rb "
+
+[rust]
+symbol = "rs "
+
+[scala]
+symbol = "scala "
+
+[spack]
+symbol = "spack "
+
+[sudo]
+symbol = "sudo "
+
+[swift]
+symbol = "swift "
