update i3config, i3blocks, kitty, polybar, rofi, sxhkdrc, zshrc

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,15 +1,15 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-# gruvbox theme
-include kitty-gruvbox/gruvbox_dark.conf
-
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      SF Mono Powerline
+
+font_family      SF Mono Powerine
+# FiraCode Nerd Font Mono
+# SF Mono Powerline
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -27,7 +27,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 14
 
 #: Font size (in pts)
 
@@ -221,7 +221,7 @@ font_size 14.0
 
 #: The thickness of the underline cursor (in pts).
 
-# cursor_blink_interval -1
+cursor_blink_interval 0
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
@@ -236,7 +236,7 @@ font_size 14.0
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+scrollback_lines 2000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -718,7 +718,7 @@ enable_audio_bell no
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 20
+window_padding_width 15
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -2168,3 +2168,9 @@ background_opacity 0.95
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_THEME
+# Gruvbox Dark
+include current-theme.conf
+# END_KITTY_THEME
