--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -43,13 +43,7 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-position = right
-
-; wm-restack = generic
-; wm-restack = bspwm
 wm-restack = i3
-
-; override-redirect = true
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -146,7 +140,7 @@ type = internal/date
 interval = 1
 
 date = %I:%M %p
-;date-alt = %A, %B %d, %Y
+date-alt = %A, %B %d, %Y
 ;%B %d | 
 
 label = %date%
