--- a/.config/i3/config
+++ b/.config/i3/config
@@ -23,7 +23,7 @@ gaps outer 2
 smart_gaps on
 
 # show window title bars (not officially supported with i3gaps)
-default_border pixel 1
+#default_border pixel 1
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -62,11 +62,6 @@ bindsym $mod+p exec /usr/local/bin/switch-audio-port
 
 # Screenshot
 bindsym Print exec scrot ~/Pictures/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~$HOME/Pictures/$(date +"%Y-%m-%d-%T")-screenshot.png"
-
-# Rofi power
-bindsym $mod+Shift+p exec ~/.config/i3/scripts/power-profiles
-
-##### WORKSPACES 
 
 # Workspace names
 set $ws1 "1"
@@ -183,9 +178,21 @@ client.urgent           $base0A $base08 $base00 $base08 $base08
 client.placeholder      $base00 $base00 $base06 $base00 $base00
 client.background       $base07
 
-##### POLYBAR
+##### BAR
 
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+# Bumblebee Status
+bar {
+    font pango:SF Mono Powerline 10
+    position top
+    tray_output none
+    status_command ~/.config/bumblebee-status/bumblebee-status \
+        -m memory cpu date time \
+		-p time.format="%H:%M" \
+        -t gruvbox-powerline
+}
+
+# Polybar
+#exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 ##### MISC SETTINGS
 
