--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -37,7 +37,7 @@
 # Global properties
 #
 # The top properties below are applied to every block, but can be overridden.
-separator=false
+separator=true
 markup=pango
 
 #[terminal]
@@ -78,10 +78,10 @@ markup=pango
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-[memory]
-label=
-command=~/.config/i3/scripts/memory
-interval=2
+#[memory]
+#label=
+#command=~/.config/i3/scripts/memory
+#interval=2
 
 #[cpu_usage]
 #label=
