--- a/.config/i3/config
+++ b/.config/i3/config
@@ -187,7 +187,7 @@ bar {
     tray_output none
     status_command ~/.config/bumblebee-status/bumblebee-status \
         -m memory cpu date time \
-		-p time.format="%H:%M" \
+		-p memory.usedonly="true" time.format="%H:%M" \
         -t gruvbox-powerline
 }
 
