--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,7 @@ for_window [class="^.*"] border pixel 2
 # class											border  backgr. text    indicator child_border
 for_window [class="^.*"] client.focused         #77dd77 #285577 #ffffff #2e9ef4   #285577
 
-##### WORKSPACE LAYOUT
+# ===== WORKSPACE LAYOUT
 
 # default i3 tiling mode:
 workspace_layout default
@@ -25,7 +25,7 @@ smart_gaps on
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-##### POWER KEYBINDINGS
+# ===== POWER KEYBINDINGS
 
 # exit-menu
 bindsym $mod+Shift+e exec ~/.config/i3/scripts/powermenu
@@ -33,7 +33,7 @@ bindsym $mod+Shift+e exec ~/.config/i3/scripts/powermenu
 # change focus between tiling / floating windows
 bindsym $mod+g focus mode_toggle
 
-##### MULTIMEDIA KEYS
+# ===== MULTIMEDIA KEYS
 
 # volume
 bindsym XF86AudioRaiseVolume exec amixer -D pulse sset Master 5%+ && pkill -RTMIN+1 i3blocks
@@ -55,7 +55,7 @@ bindsym XF86AudioPrev exec playerctl previous
 # Redirect sound to headphones
 bindsym $mod+p exec /usr/local/bin/switch-audio-port
 
-##### APP SHORTCUTS
+# ===== APP SHORTCUTS
 
 # Screenshot
 bindsym Print exec scrot ~/Pictures/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~$HOME/Pictures/$(date +"%Y-%m-%d-%T")-screenshot.png"
@@ -90,11 +90,11 @@ for_window [class=(?i)Solaar] focus
 for_window [class=(?i)discord] focus
 for_window [class=(?i)firefox] focus
 
-##### TRANSPARENCY
+# ===== TRANSPARENCY
 
 exec_always --no-startup-id picom --vsync
 
-##### AUTOSTART
+# ===== AUTOSTART
 
 exec_always sxhkd
 
@@ -119,18 +119,12 @@ exec --no-startup-id xset s 480 dpms 600 600 600
 # Desktop notifications === dunstrc is the stock notification, I turned it off 
 exec --no-startup-id dbus-launch dunst --config ~/.config/dunst/dunstrc
 
-# Autostart apps as you like
-#exec --no-startup-id sleep 7 && firefox 
-
-##### SYSTEM TRAY
-
-# start blueberry app for managing bluetooth devices from tray:
-#exec --no-startup-id blueberry-tray
+# ===== SYSTEM TRAY
 
 # networkmanager-applet
 #exec --no-startup-id nm-applet
 
-##### FLOATING RULES
+# ===== FLOATING RULES
 
 # set floating (nontiling) for apps needing it
 for_window [class="Yad" instance="yad"] floating enable
@@ -146,13 +140,9 @@ for_window [class="Bluetooth-sendto" instance="bluetooth-sendto"] floating enabl
 for_window [class="Pamac-manager"] floating enable
 for_window [window_role="About"] floating enable
 
-# set border of floating window
-#for_window [class="urxvt"] border pixel 1
-
-##### COLOR SETTINGS FOR BAR AND WINDOWS
+# ===== COLOR SETTINGS FOR BAR AND WINDOWS
 
 # Define colors variables
-
 set $base00 #2E3440
 set $base01 #3B4252
 set $base02 #434C5E
@@ -170,7 +160,7 @@ set $base0D #EBCB8B
 set $base0E #A3BE8C
 set $base0F #B48EAD
 
-##### WINDOW COLORS
+# ===== WINDOW COLORS
 
 # Property Name         Border  BG      Text    Indicator Child Border
 client.focused          $base0A $base02 $base06 $base0C $base02
@@ -180,7 +170,7 @@ client.urgent           $base0A $base08 $base00 $base08 $base08
 client.placeholder      $base00 $base00 $base06 $base00 $base00
 client.background       $base07
 
-##### BAR
+# ===== BAR
 
 # Bumblebee Status
 bar {
@@ -196,7 +186,7 @@ bar {
 # Polybar
 #exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
-##### MISC SETTINGS
+# ===== MISC SETTINGS
 
 # Focus follows mouse
 focus_follows_mouse no
