--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,5 @@
+# ===== kitty.conf
+
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Fonts {{{
@@ -10,7 +12,7 @@
 # FiraCode Nerd Font Mono
 # SF Mono Powerline
 
-font_family      SF Mono Powerine
+font_family      SF Mono Powerline
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
