--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,8 +11,9 @@
 
 # FiraCode Nerd Font Mono
 # SF Mono Powerline
+# Noto Sans Mono
 
-font_family      SF Mono Powerline
+font_family      monospace
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -25,12 +26,15 @@ bold_italic_font auto
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-#:     font_family      Operator Mono Book
-#:     bold_font        Operator Mono Medium
-#:     italic_font      Operator Mono Book Italic
-#:     bold_italic_font Operator Mono Medium Italic
+# BitStreamVeraSansMono Nerd Font
+# Hack Nerd Font Mono
 
-font_size 14
+font_family		NotoMono Nerd Font
+#: bold_font        Operator Mono Medium
+#: italic_font      Operator Mono Book Italic
+#: bold_italic_font Operator Mono Medium Italic
+
+font_size 13.5
 
 #: Font size (in pts)
 
@@ -53,7 +57,7 @@ font_size 14
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  95%
+adjust_line_height  110%
 adjust_column_width 110%
 
 #: Change the size of each character cell kitty renders. You can use
