--- a/.config/i3/config
+++ b/.config/i3/config
@@ -179,7 +179,7 @@ client.background       $base07
 
 # Bumblebee Status
 bar {
-    font pango:SF Mono Powerline 10
+    font pango:IBM Plex Mono 9.5
     position top
     tray_output none
     status_command ~/.config/bumblebee-status/bumblebee-status \
