--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -15,7 +15,7 @@ print_info() {
     info " " model
     info " " cpu
 #    info "﬙ " gpu
-#    info " " disk
+#	info " " disk
     info "ﳔ " memory
     info " " resolution
 #    info "󱈑 " battery 
@@ -27,12 +27,12 @@ print_info() {
     info " " kernel
 #    info " " de
     info " " wm
-#    info "Shell" shell
+    info " " shell
     info " " term
     info " " term_font
 #    info " " theme
 #    info " " icons
-#    info " " packages
+    info " " packages
 #    info "󰅐 " uptime
 	# Backup
     # info "GPU Driver" gpu_driver  # Linux/macOS only
