--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -29,7 +29,7 @@ bold_italic_font auto
 # BitStreamVeraSansMono Nerd Font
 # Hack Nerd Font Mono
 
-font_family		NotoMono Nerd Font
+font_family		FiraCode NF
 #: bold_font        Operator Mono Medium
 #: italic_font      Operator Mono Book Italic
 #: bold_italic_font Operator Mono Medium Italic
@@ -57,8 +57,8 @@ font_size 13.5
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  110%
-adjust_column_width 110%
+# adjust_line_height  100%
+# adjust_column_width 100%
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
