--- a/.config/i3/config
+++ b/.config/i3/config
@@ -121,11 +121,6 @@ exec --no-startup-id xset s 480 dpms 600 600 600
 # Desktop notifications === dunstrc is the stock notification, I turned it off 
 exec --no-startup-id dbus-launch dunst --config ~/.config/dunst/dunstrc
 
-# ----- system tray ---------------------------------------
-
-# networkmanager-applet
-#exec --no-startup-id nm-applet
-
 # ----- floating rules ------------------------------------
 
 # set floating (nontiling) for apps needing it
@@ -176,7 +171,7 @@ client.background       $base07
 
 # Bumblebee Status
 bar {
-    font pango:FiraCode NF 9.5
+    font pango:IBM Plex Mono 9.5
     position top
     tray_output none
     status_command ~/.config/bumblebee-status/bumblebee-status -m \
