kitty transparency, neofetch formatting

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -29,7 +29,7 @@ bold_italic_font auto
 # BitStreamVeraSansMono Nerd Font
 # Hack Nerd Font Mono
 
-font_family		FiraCode NF
+font_family		IBM Plex Mono
 #: bold_font        Operator Mono Medium
 #: italic_font      Operator Mono Book Italic
 #: bold_italic_font Operator Mono Medium Italic
@@ -980,7 +980,7 @@ window_padding_width 15
 
 #: The foreground and background colors.
 
-background_opacity 0.95
+background_opacity 0.94
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -2178,6 +2178,6 @@ background_opacity 0.95
 
 
 # BEGIN_KITTY_THEME
-# Gruvbox Dark
+Gruvbox Dark
 include current-theme.conf
 # END_KITTY_THEME
