--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -12,9 +12,9 @@ print_info() {
 #    info underline
     prin ""
     prin "Hardware Information"
-    info " " model
-    info " " cpu
-#    info "﬙ " gpu
+	info " " model
+	info " " cpu
+#   info "﬙ " gpu
 #	info " " disk
     info "ﳔ " memory
     info " " resolution
@@ -33,7 +33,7 @@ print_info() {
 #    info " " theme
 #    info " " icons
     info " " packages
-#    info "󰅐 " uptime
+    info "󰅐 " uptime
 	# Backup
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
@@ -42,7 +42,7 @@ print_info() {
     # [[ "$player" ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
     # info "Public IP" public_ip
-    #info "Users" users
+    # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
     prin ""
 #    info cols
