--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-# ===== kitty.conf
+# ----- kitty.conf --------------------------------------------------
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
@@ -28,13 +28,14 @@ bold_italic_font auto
 
 # BitStreamVeraSansMono Nerd Font
 # Hack Nerd Font Mono
+# Code New Roman
 
-font_family		IBM Plex Mono
+font_family		Hack Nerd Font Mono
 #: bold_font        Operator Mono Medium
 #: italic_font      Operator Mono Book Italic
 #: bold_italic_font Operator Mono Medium Italic
 
-font_size 13.5
+font_size 13
 
 #: Font size (in pts)
 
@@ -57,8 +58,8 @@ font_size 13.5
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-# adjust_line_height  100%
-# adjust_column_width 100%
+#adjust_line_height  100%
+#adjust_column_width 100%
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
