--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -33,7 +33,7 @@ print_info() {
 #    info " " theme
 #    info " " icons
     info " " packages
-    info "󰅐 " uptime
+#    info "󰅐 " uptime
 	# Backup
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
