--- a/.config/i3/config
+++ b/.config/i3/config
@@ -55,7 +55,7 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # Redirect sound to headphones
-bindsym $mod+p exec /usr/local/bin/switch-audio-port
+#bindsym $mod+p exec /usr/local/bin/switch-audio-port
 
 # ----- app shortcuts -------------------------------------
 
