--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -16,7 +16,7 @@ scrolling:
 
 font:
   normal:
-    family: "FuraMono Nerd Font"
+    family: "FiraCode Nerd Font"
   size: 13.5
   offset:
     x: 0
