--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -7,7 +7,7 @@ print_info() {
     info "OS" distro
     info "Host" model
     info "Kernel" kernel
-    # info "Uptime" uptime
+    info "Uptime" uptime
     # info "Packages" packages
     info "Shell" shell
     # info "Resolution" resolution
@@ -15,7 +15,7 @@ print_info() {
     info "WM" wm
     # info "WM Theme" wm_theme
     # info "Theme" theme
-    # info "Icons" icons
+    info "Icons" icons
     info "Terminal" term
     info "Terminal Font" term_font
     info "CPU" cpu
