--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -1,12 +1,12 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    info title
-    info underline
+    # info title
+    # info underline
 
     info "OS" distro
     info "Host" model
-    # info "Kernel" kernel
+    info "Kernel" kernel
     # info "Uptime" uptime
     # info "Packages" packages
     # info "Shell" shell
@@ -16,8 +16,8 @@ print_info() {
     # info "WM Theme" wm_theme
     # info "Theme" theme
     # info "Icons" icons
-    # info "Terminal" term
-    # info "Terminal Font" term_font
+    info "Terminal" term
+    info "Terminal Font" term_font
     # info "CPU" cpu
     # info "GPU" gpu
     # info "Memory" memory
