Forcing commit of local files

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2179,6 +2179,6 @@ background_opacity 0.94
 
 
 # BEGIN_KITTY_THEME
-Gruvbox Dark
+# Gruvbox Material Dark Soft
 include current-theme.conf
 # END_KITTY_THEME
