--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -8,7 +8,7 @@ window:
   class:
     instance: Alacritty
     general: Alacritty
-  opacity: 0.92
+  opacity: 0.90
 
 scrolling:
   history: 10000
@@ -17,7 +17,7 @@ scrolling:
 font:
   normal:
     family: "FiraCode Nerd Font"
-  size: 13.5
+  size: 14
   offset:
     x: 0
     y: 0
@@ -41,8 +41,7 @@ colors:
   # Default colors
   primary:
     # hard contrast: background = '#1d2021'
-    # background: '#282828'
-    background: '#1d2021'
+    background: '#282828'
     # soft contrast: background = '#32302f'
     foreground: '#ebdbb2'
 
