--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,4 +1,4 @@
-# ----- alacritty.yml -------------------------------------
+# ----- Alacritty -----------------------------------------
 
 # theme switcher, 'alacritty-themes', in terminal
 window:
